--- a/src/main/resources/templates/pages/group.html
+++ b/src/main/resources/templates/pages/group.html
@@ -8,7 +8,7 @@
       <nav class="navbar navbar-expand-lg navbar-transparent navbar-absolute fixed-top " id="navigation-example">
         <div class="container-fluid">
           <div class="navbar-wrapper">
-            <a class="navbar-brand" href="javascript:void(0)">훈련 그룹</a>
+            <a class="navbar-brand" href="javascript:void(0)">훈련 프로젝트</a>
           </div>
           <button class="navbar-toggler" type="button" data-toggle="collapse" aria-controls="navigation-index" aria-expanded="false" aria-label="Toggle navigation" data-target="#navigation-example">
             <span class="sr-only">Toggle navigation</span>
@@ -59,11 +59,11 @@
         <div class="container-fluid">
             <div class="row">
                 <div class="col-md-12">
-                    <a href="#" class="btn btn-success btn" data-toggle="modal" data-target="#regModal">그룹 신규등록</a>
+                    <a href="#" class="btn btn-success btn" data-toggle="modal" data-target="#regModal">프로젝트 신규등록</a>
                 </div>
             </div>
             <div class="row project-card-section">
-                <div class="col-lg-4 col-md-12 project-card">
+                <div class="col-lg-6 col-md-12 project-card">
                     <div class="card">
                         <div class="card-header card-header-primary">
                             <span id="trg_status" class="badge badge-secondary"></span>
@@ -71,14 +71,14 @@
                         </div>
                         <div class="card-body table-responsive">
                             <div class="row">
-                                <label class="col-sm-5 text-right">훈련그룹 기간</label>
+                                <label class="col-sm-5 text-right">훈련프로젝트 기간</label>
                                 <div class="col-sm-7">
                                     <span class="trg_start"></span> ~
                                     <span class="trg_end"></span>
                                 </div>
                             </div>
                             <div class="row">
-                                <label class="col-sm-5 text-right">훈련그룹 설명</label>
+                                <label class="col-sm-5 text-right">훈련프로젝트 설명</label>
                                 <div class="col-sm-7">
                                     <span class="trg_desc"></span>
                                 </div>
@@ -104,13 +104,13 @@
                   <button type="button" class="close" data-dismiss="modal" aria-hidden="true">
                     <i class="material-icons">clear</i>
                   </button>
-                  <h4 class="card-title">훈련그룹 추가</h4>
+                  <h4 class="card-title">훈련프로젝트 추가</h4>
                 </div>
               </div>
               <div class="modal-body">
 
                 <form class="form" method="" action="">
-                  <p class="description text-center">신규 훈련그룹을 등록합니다!</p>
+                  <p class="description text-center">신규 훈련프로젝트을 등록합니다!</p>
                   <div class="card-body">
 
                     <div class="row">
@@ -138,7 +138,7 @@
                                     <i class="material-icons">email</i>
                                   </div>
                                 </div>
-                                <input type="text" class="form-control" placeholder="그룹 설명" name="email" email="true" id="trg_desc">
+                                <input type="text" class="form-control" placeholder="프로젝트 설명" name="email" email="true" id="trg_desc">
                               </div>
                             </div>
                           </div>
