--- a/src/main/resources/templates/pages/group_detail.html
+++ b/src/main/resources/templates/pages/group_detail.html
@@ -248,6 +248,9 @@
             title : "대상자수",
             className : "text-center",
             data : "tugCount",
+            render : function(data) {
+              return data+"명";
+            }
           },
       ],
 
