--- a/src/main/resources/templates/pages/tables.html
+++ b/src/main/resources/templates/pages/tables.html
@@ -8,12 +8,6 @@
       <nav class="navbar navbar-expand-lg navbar-transparent navbar-absolute fixed-top " id="navigation-example">
         <div class="container-fluid">
           <div class="navbar-wrapper">
-<!--            <div class="navbar-minimize">-->
-<!--              <button id="minimizeSidebar" class="btn btn-just-icon btn-white btn-fab btn-round">-->
-<!--                <i class="material-icons text_align-center visible-on-sidebar-regular">more_vert</i>-->
-<!--                <i class="material-icons design_bullet-list-67 visible-on-sidebar-mini">view_list</i>-->
-<!--              <div class="ripple-container"></div></button>-->
-<!--            </div>-->
             <a class="navbar-brand" href="javascript:void(0)">사용자</a>
           </div>
           <button class="navbar-toggler" type="button" data-toggle="collapse" aria-controls="navigation-index" aria-expanded="false" aria-label="Toggle navigation" data-target="#navigation-example">
@@ -78,17 +72,27 @@
                     <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
                       <a class="dropdown-item" href="#" data-toggle="modal" data-target="#regModal">신규등록</a>
                       <a class="dropdown-item" href="#" data-toggle="modal" data-target="#excelModal">일괄등록</a>
+                      <a class="dropdown-item" href="#" id="multi_delete">일괄삭제</a>
                     </div>
                   </div>
                 </div>
                 <div class="card-body">
                   <div class="toolbar">
-                    <!--        Here you can write extra buttons/actions for the toolbar              -->
                   </div>
                   <div class="material-datatables">
                     <table id="UserDatable" class="table table-striped table-no-bordered table-hover" cellspacing="0" width="100%" style="width:100%">
                       <thead>
                         <tr>
+                          <th>
+                            <div class="form-check userdatatable">
+                              <label class="form-check-label">
+                                <input class="form-check-input" type="checkbox" id="check_all">
+                                <span class="form-check-sign">
+                                  <span class="check"></span>
+                                </span>
+                              </label>
+                            </div>
+                          </th>
                           <th>이름</th>
                           <th>이메일</th>
                           <th>직급</th>
@@ -504,8 +508,40 @@
             xhr.setRequestHeader(header, token);
           },
           data: {'u_id': u_id},
-          success: function () {
-            location.reload();
+          complete: function () {
+            swal.fire({
+              'title' : '삭제 완료!',
+              'icon'  : 'success'
+            }).then((result) => {
+              if (result.isConfirmed) {
+                location.reload();
+              }
+            });
+          },
+          error: function (thrownError) {
+            console.log(thrownError);
+          }
+        });
+    }
+
+    function deleteUsers(u_id) {
+        $.ajax({
+          url : "deleteUsers.do",
+          type : "POST",
+          dataType : "json",
+          beforeSend: function (xhr) {
+            xhr.setRequestHeader(header, token);
+          },
+          data: {'uid': u_id},
+          complete: function (result) {
+            swal.fire({
+              'title' : '삭제 완료!',
+              'icon'  : 'success'
+            }).then((result) => {
+              if (result.isConfirmed) {
+                location.reload();
+              }
+            });
           },
           error: function (thrownError) {
             console.log(thrownError);
@@ -532,6 +568,18 @@
           },
         },
         columns : [
+          {
+            data : "uid",
+            defaultContent:"",
+            targets: 0,
+            searchable: false,
+            className:'Userdatatable-check',
+            render: function (data) {
+              return '<div class="form-check userdatatable"><label class="form-check-label">'+
+                      '<input class="form-check-input checked" type="checkbox" name="user_check" data-u_id="'+data+'" value="'+data+'">'+
+                      '<span class="form-check-sign"><span class="check"></span></span></label></div>';
+            }
+          },
           {data : "userNm"},
           {data : "userEmail"},
           {data : "userRank"},
@@ -564,15 +612,18 @@
 
       });
 
+      table.on('change', '#check_all', function() {
+        var checked = $(this).is(':checked');
+        if(checked) {
+            $('.checked').prop('checked',true);
+        } else {
+            $('.checked').prop('checked',false);
+        }
+      });
+
       // Delete a record
       table.on('click', '.remove', function(e) {
-        // $tr = $(this).closest('tr');
-        // if ($($tr).hasClass('child')) {
-        //   $tr = $tr.prev('.parent');
-        // }
-        // table.row($tr).remove().draw();
-        // e.preventDefault();
-
+        e.preventDefault();
         var u_id = $(this).data('u_id');
 
         Swal.fire({
@@ -591,10 +642,37 @@
         });
       });
 
-      // //Like record
-      // table.on('click', '.like', function() {
-      //   alert('You clicked on Like button');
-      // });
+      $('#multi_delete').click(function(e) {
+        e.preventDefault();
+          var checkBoxArr = [];
+
+          $('input[name="user_check"]:checked').each(function() {
+            checkBoxArr.push($(this).val());
+          });
+
+          if(checkBoxArr.length < 1) {
+            Swal.fire({
+              'title' : '',
+              'text' : '삭제할 유저를 선택해주세요.',
+              'type' : 'warning',
+            });
+          } else {
+            Swal.fire({
+              title: '사용자를 삭제하시겠습니까?',
+              text: "사용한 사용자는 되돌릴 수 없습니다.",
+              icon: 'warning',
+              showCancelButton: true,
+              confirmButtonColor: '#3085d6',
+              cancelButtonColor: '#d33',
+              confirmButtonText: '네!',
+              cancelButtonText: '취소',
+            }).then((result) => {
+              if (result.isConfirmed) {
+                  deleteUsers(checkBoxArr);
+              }
+            });
+          }
+      });
 
       $('#download_excel').click(function(e) {
         $.ajax({
@@ -647,6 +725,7 @@
             $('.input-group.level_lv .filter-option-inner-inner').html('권한레벨');
 
         });
+
 
     });
   </script>
