--- a/src/main/resources/templates/pages/tables.html
+++ b/src/main/resources/templates/pages/tables.html
@@ -294,7 +294,7 @@
               </div>
               <div class="modal-body">
 
-                <form class="form" id="excelUploadForm" name="excelUploadForm" enctype="multipart/form-data" method="post" action= "/excelUpload.do">
+                <form class="form" id="excelUploadForm" name="excelUploadForm" enctype="multipart/form-data" method="post" action= "/UserexcelUpload.do">
                   <p class="description text-center">엑셀 파일을 업로드해주세요</p>
                     <div class="row">
                       <div class="col-sm-12">
